<resources>
    <string name="app_name">Drafter</string>
    <string name="Usuario">Usuario </string>
    <string name="Contraseña">Contraseña</string>
    <string name="InicioSesion">Inicio Sesion </string>
    <string name="Registrarse">Registrarse</string>
    <string name="AceptarPoliticas">Acepta las politicas de usuario</string>
    <string name="SobreNosotros">Sobre Nosotros </string>
    <string name="PrimerParrafoSobreNosotros">En Drafter nuestra misión es llevar la emocion de las carreras al siguiente nivel. Somos una empresa apasionada por la tecnologia y los deportes de motor, especializada en el desarrollo de simuladores de carreras</string>
    <string name="SegundoParrafoSobreNosotros">Nuestro objetivo es ofrecer una experiencia de conduccion realiasta y accesible tanto para aficionados como para profesionales del automovilismo </string>
    <string name="PoliticayAcuerdo">POLITICA Y ACUERDOS DE USUARIO </string>
    <string name="Bienvenido">Bienvenido </string>
    <string name="TextoDatosUsuario">En esta sección podrás ver tus datos de sesión cuando lo desees: </string>
    <string name="Copa">Copas</string>
    <string name="añadirCopa">Añadir copas</string>
    <string name="eliminarCopa">Eliminar copas</string>
    <string name="editarCopa">Editar copas</string>
    <string name="nombreCopa">nombre copa</string>
    <string name="agregar">agregar</string>
    <string name="tituloElegirCircuito">Elegir circuito</string>
    <string name="textoElegirCircuito">¡Elija un circuito para simular una carrera!</string>
    <string name="textoFooter">¡Estamos calentando motores!</string>
    <string name="tituloCompetidores">Competidores</string>
    <string name="textoCompetidoresInfo">¡Crea los equipos (Piloto + Coche) que desees y comienza la carrera!</string>
    <string name="carreraElegida">Circuito</string>
    <string name="gestionCompetidores">Gestion</string>
    <string name="Coche">Coche</string>
    <string name="Piloto">Piloto</string>
    <string name="Editar">Editar</string>
    <string name="Resultado">Resultado</string>
    <string name="Posiciones_Resultado">Posiciones resultado</string>
    <string name="ver_resultado">Ver Resultado</string>
    <string name="Puntuacion" />
    <string name="Mostrar_Resultado" />
    <string name="Sobre_Nosotros" />
    <string name="Desconectarte" />
    <string name="Fotos" />
    <string name="Videos" />
    <string name="Grabacion_de_voz"/>
</resources>