<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/pilotos"
        android:icon="@drawable/piloto"
        android:title="TODO"
        app:showAsAction="always" />
    <item
        android:id="@+id/SobreNosotros1"
        android:title="@string/Sobre_Nosotros" />
    <item
        android:id="@+id/Mostrar_Resultado"
        android:title="@string/Mostrar_Resultado" />
    <item
        android:id="@+id/Fotos"
        android:title="@string/Fotos" />
    <item
        android:id="@+id/Videos"
        android:title="@string/Videos" />
    <item
        android:id="@+id/Grabar_Voz"
        android:title="@string/Grabacion_de_voz" />
    <item
        android:id="@+id/Desconectarse"
        android:title="@string/Desconectarte"
        app:showAsAction="never" />


</menu>
