<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GestionCompetidores">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="15"
      android:background="#E5404E"
      android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:fontFamily="@font/audiowide"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#FFFDFD"
        android:textSize="48sp"
        tools:text="@string/app_name" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        app:srcCompat="@android:drawable/ic_media_rew" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="15"
      android:orientation="vertical">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:fontFamily="@font/audiowide"
        android:gravity="bottom|center"
        android:text="@string/tituloCompetidores"
        android:textColor="#050505"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_weight="60"
        android:gravity="center"
        android:text="@string/textoCompetidoresInfo"
        android:textColor="#000000"
        android:textSize="20sp" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="15"
      android:orientation="vertical">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:fontFamily="@font/audiowide"
        android:gravity="center"
        android:text="@string/carreraElegida"
        android:textColor="#050505"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/imprimirCarrera"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_weight="70"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="20sp" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="45"
      android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="#E33F4D"
        android:orientation="vertical">

      <TextView
          android:id="@+id/textView16"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:fontFamily="@font/audiowide"
          android:gravity="center"
          android:text="@string/gestionCompetidores"
          android:textColor="#E9E7E7"
          android:textSize="24sp"
          android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80"
        android:orientation="vertical">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="20"
          android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:ems="10"
            android:gravity="center"
            android:inputType="text"
            android:text="@string/Coche" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:ems="10"
            android:gravity="center"
            android:inputType="text"
            android:text="@string/Piloto" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:backgroundTint="#E33F4D"
            android:text="@string/agregar"
            android:textColor="#FAF3F3" />
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="50"
          android:orientation="vertical">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="30"
          android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:orientation="horizontal">

          <EditText
              android:id="@+id/editTextText3"
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_weight="30"
              android:ems="10"
              android:gravity="center"
              android:inputType="text"
              android:text="Name" />

          <ImageView
              android:id="@+id/imageView8"
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_weight="20"
              app:srcCompat="@drawable/eliminar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:orientation="horizontal">

          <TextView
              android:id="@+id/textView19"
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_weight="30"
              android:gravity="center"
              android:text="TextView" />

          <ImageView
              android:id="@+id/imageView9"
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_weight="20"
              app:srcCompat="@drawable/modificar" />
        </LinearLayout>
      </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">

      <ImageButton
          android:id="@+id/imageButton"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          app:srcCompat="@drawable/comenzar" />
    </LinearLayout>
  </LinearLayout>
</LinearLayout>