<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD"
    android:orientation="vertical"
    tools:context=".Informacion">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMenu"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center"
        android:layout_weight="10"
        android:background="#E5404E"
        android:gravity="center"
        android:minHeight="?attr/actionBarSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/Bienvenido"
            android:textColor="#000000"
            android:textSize="34sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Pista"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:foregroundTint="#0D0C0C"
            android:gravity="center"
            android:textColor="#100F0F"
            android:textSize="34sp"
            android:textStyle="bold"
            tools:text="@string/Copa" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            app:srcCompat="@drawable/fondocart" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="65"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/listacopas"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="30"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="50"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="50"
                        android:gravity="center"
                        android:text="@string/añadirCopa"
                        android:textColor="#101010"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editTextText2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="50"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="text"
                        android:text="@string/nombreCopa"
                        android:textColor="#090909" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="35"
                    app:srcCompat="@drawable/anidar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="30"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="50"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="50"
                        android:gravity="center"
                        android:text="@string/añadirCopa"
                        android:textColor="#101010"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editTextText2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="50"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="text"
                        android:text="@string/nombreCopa"
                        android:textColor="#090909" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="35"
                    app:srcCompat="@drawable/eliminar" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="30"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="50"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="50"
                        android:gravity="center"
                        android:text="@string/añadirCopa"
                        android:textColor="#101010"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editTextText2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="50"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="text"
                        android:text="@string/nombreCopa"
                        android:textColor="#090909" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="50"
                    app:srcCompat="@drawable/modificar" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>